[project]
name = "shahbaz-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.poetry]
package-mode = false